[update] 完成学生端页面调整

--- a/src/main/resources/templates/student/announce/list.html
+++ b/src/main/resources/templates/student/announce/list.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 系统公告列表</title>
-    <%
-    include("../include/css.html"){}
-    %>
+    <% include("../../include/css.html"){}%>
     <style>
         .table > tbody > tr:hover {
             cursor: pointer;
@@ -29,13 +27,9 @@
 <body class="hold-transition skin-green sidebar-mini">
 
 <div class="wrapper">
-    <%
-    include("../student/include/header.html"){}
-    %>
+    <% include("../../student/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%
-    include("../student/include/sider.html"){}
-    %>
+    <% layout("../../student/include/sider.html",{name:"announce"}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
 
@@ -50,9 +44,7 @@
                 <div class="box-body no-padding">
                     <table class="table table-hover">
                         <tbody>
-                        <%
-                        for(announce in announceList){
-                        %>
+                        <%for(announce in announceList){%>
                         <tr class="rowDetail success" rel="${announce.id}">
                             <th class="td_title">${announceLP.index}. ${announce.title} <span class="pull-right">
                                     发布时间： ${announce.createTime,dateFormat="yyyy-MM-dd HH:mm:ss"}
@@ -75,14 +67,10 @@
         </section>
     </div>
     <!-- 引入footer -->
-    <%
-    include("../include/footer.html"){}
-    %>
+    <% include("../../include/footer.html"){}%>
 </div>
 <!-- 引入全局 js 脚本文件 -->
-<%
-include("../include/js.html"){}
-%>
+<% include("../../include/js.html"){} %>
 </body>
 </html>
 
