--- a/src/main/resources/templates/student/self/help.html
+++ b/src/main/resources/templates/student/self/help.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 学生首页</title>
-    <!-- 引入全局 css 文件 -->
-    <%
-    include("../include/css.html"){}
-    %>
-    <!-- 样式 -->
+    <title>OES | 学生帮助中心</title>
+    <!-- css style -->
+    <%include("../../include/css.html"){}%>
     <style>
         p {
             text-indent: 30px;
@@ -17,29 +14,24 @@
 </head>
 <body class="hold-transition skin-green sidebar-mini">
 <div class="wrapper">
-    <!-- 引入头部 -->
-    <%
-    include("include/header.html"){}
-    %>
+    <!-- 顶部导航栏部分 -->
+    <%include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%
-    include("include/sider.html"){}
-    %>
+    <%layout("../include/sider.html",{name:"help"}){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <section class="content-header">
             <h1 style="font-family: 'Microsoft Yahei', Arial, Helvetica, sans-serif;text-align:center; font-size: 30px">
-                欢迎使用 On-line Examination System 在线考试系统
+                这里是 OES - 学生端帮助中心
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
             </ol>
         </section>
-        <!-- table 部分 -->
         <section class="content">
             <div class="box">
                 <div class="box-header with-border">
-                    <h3 class="box-title lead" style="font-size: 22px;font-weight: 800">诚信考试倡议书</h3>
+                    <h3 class="box-title lead" style="font-size: 22px;font-weight: 800">帮助说明</h3>
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
                                 title="Collapse">
@@ -50,31 +42,26 @@
                     </div>
                 </div>
                 <div class="box-body" style="font-size: 20px">
-                    　　<p>为了加强全校考风考纪建设，我们作出如下倡议：</p>
-                    　　<p>一、全面复习，认真备考，投身“提倡文明修身，严肃考风考纪”的行动中;</p>
-                    　　<p>二、各班加大考风考纪教育力度，严肃考风考纪，严格执行学校的有关文件规定，明确作弊危害和后果，树立良好的考试心态;</p>
-                    　　<p>三、党员、学生干部为诚信考试树立模范带头作用，端正考风、严肃考纪;</p>
-                    　　<p>四、提倡对作弊的同学如实上报，绝不包庇。</p>
-                    　　<p>五、各班级、各支部携手共进，为严肃考风考纪，树立良好的学风，杜绝作弊现象进到一份义务。</p>
-                    　　<p>最后，衷心预祝全体同学在期末考试中取得优异的成绩!</p>
+                    <p>学生端包含如下功能：</p>
+                    <p>一、查询系统公告</p>
+                    <p>二、查看考试信息</p>
+                    <p>三、在线考试</p>
+                    <p>四、查看成绩</p>
+                    <p>五、成绩分析查询</p>
                 </div>
                 <div class="box-footer ">
                     <blockquote class="blockquote-reverse">
-                        <p style="color: green">祝您开启愉快的一天！</p>
+                        <p style="color: #2D93CA">祝您开启愉快的一天！</p>
                     </blockquote>
                 </div>
             </div>
         </section>
     </div>
     <!-- 引入footer -->
-    <%
-    include("../include/footer.html"){}
-    %>
+    <%include("../../include/footer.html"){}%>
 </div>
 <!-- 引入全局 js 脚本文件 -->
-<%
-include("../include/js.html"){}
-%>
+<%include("../../include/js.html"){}%>
 </body>
 </html>
 
