--- a/src/main/resources/templates/student/self/update-pass.html
+++ b/src/main/resources/templates/student/self/update-pass.html
@@ -12,7 +12,7 @@
     <!-- 顶部导航栏部分 -->
     <%include("../student/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%include("../student/include/sider.html"){}%>
+    <%layout("../student/include/sider.html",{name:"update-pass"}){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <section class="content">
