--- a/src/main/resources/templates/teacher/major/list.html
+++ b/src/main/resources/templates/teacher/major/list.html
@@ -31,7 +31,7 @@
     <!-- 引入头部 -->
     <% include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <% layout("../include/sider.html",{name:major}){} %>
+    <% layout("../include/sider.html",{name:"major"}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <section class="content">
