--- a/src/main/resources/templates/student/exam/detail.html
+++ b/src/main/resources/templates/student/exam/detail.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 试卷详情</title>
     <!-- 引入全局 css 文件 -->
-    <%
-    include("../include/css.html"){}
-    %>
+    <%include("../../include/css.html"){} %>
     <style>
         th {
             font-size: 18px;
@@ -21,9 +19,7 @@
 <body class="hold-transition skin-green sidebar-mini">
 <div class="wrapper">
     <!-- 引入头部 -->
-    <%
-    include("include/header.html"){}
-    %>
+    <%include("../include/header.html"){}%>
     <!-- 右侧内容部分 -->
     <div class="content">
         <section class="content">
@@ -206,58 +202,10 @@
     <!-- 底部 -->
 </div>
 <!-- 引入全局 js 脚本文件 -->
-<%
-include("../include/js.html"){}
-%>
-<script src="/static/plugins/layer/layer.js"></script>
+<% include("../../include/js.html"){} %>
 <script src="/static/plugins/moment/moment.js"></script>
 <script src="/static/plugins/jquery-countdown/jquery.countdown.min.js"></script>
-<script>
-
-    // 计时答题核心代码（通过JQuery实现）
-    $(function () {
-        // countdown 用于减少时间，一旦检测到时间为00:00：:00则自动提交试卷
-        $("#clock").countdown("${paper.endTime}", function (event) {
-            $(this).html(event.strftime('%H小时 %M分钟 %S秒'));
-        }).on("finish.countdown", function () {
-            $("#submitBtn").text("考试结束").attr("disabled", "disabled");
-            layer.msg('试卷将在2s后自动提交', {icon: 4});
-            $(this).delay(2000).queue(function () {
-                $("#paper").submit();
-            });
-        });
-    });
-
-    // 禁止复制
-    document.oncontextmenu = function () {
-        return false;
-    };
-
-    // 禁止粘贴
-    document.onpaste = function () {
-        return false;
-    };
-
-    document.ondragstart = function () {
-        return false;
-    };
-
-    document.onselectstart = function () {
-        return false;
-    };
-
-    document.onselect = function () {
-        return false;
-    };
-
-    document.oncopy = function () {
-        return false;
-    };
-
-    document.onmouseup = function () {
-        return false;
-    };
-</script>
+<%include("api.html"){}%>
 </body>
 </html>
 
