--- a/src/main/resources/templates/teacher/announce/list.html
+++ b/src/main/resources/templates/teacher/announce/list.html
@@ -29,7 +29,7 @@
     <!-- 引入头部 -->
     <% include("../include/header.html"){}%>
     <!-- 左侧菜单栏 -->
-    <% include("../include/sider.html"){} %>
+    <% layout("../include/sider.html",{name:"announce"}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <section class="content">
