--- a/src/main/resources/templates/teacher/review/list.html
+++ b/src/main/resources/templates/teacher/review/list.html
@@ -11,7 +11,7 @@
     <!-- 引入头部 -->
     <%include("../include/header.html"){}%>
     <!-- 左侧菜单栏 -->
-    <%include("../include/sider.html"){}%>
+    <%include("../include/sider.html",{name:"review"}){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
 
