--- a/src/main/resources/templates/teacher/self/help.html
+++ b/src/main/resources/templates/teacher/self/help.html
@@ -20,7 +20,7 @@
     <!-- 引入头部 -->
     <%include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%include("../include/sider.html"){}%>
+    <%layout("../include/sider.html",{name:"help"}){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
