[update] 接入缓存和权限拦截功能

--- a/oes-core/src/main/resources/templates/teacher/major/api.html
+++ b/oes-core/src/main/resources/templates/teacher/major/api.html
@@ -51,7 +51,7 @@
             backdrop: 'static'
         });
 
-        // 修改专业信息
+        // 增加专业信息
         $("#saveBtn").click(function () {
             layer.confirm("确定增加专业吗?", function () {
                 let data = $('#save-form').serialize();
