--- a/oes-core/src/main/resources/templates/teacher/major/save-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/major/save-modal.html
@@ -12,7 +12,7 @@
                 <form id="save-form">
                     <div class="form-group form_datetime">
                         <label>所属学院</label>
-                        <select name="academy"  style="width: 100%" class="academySelect">
+                        <select name="academyId"  style="width: 100%" class="academySelect">
                             <option value="">请选择</option>
                             <!-- 数据填充 -->
                         </select>
@@ -25,7 +25,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="">确定</button>
+                <button type="button" class="btn btn-primary" id="saveBtn">确定</button>
             </div>
         </div>
     </div>
