--- a/oes-core/src/main/resources/templates/teacher/self/update-pass.html
+++ b/oes-core/src/main/resources/templates/teacher/self/update-pass.html
@@ -13,7 +13,7 @@
     <!-- 引入头部 -->
     <%include("../include/header.html"){}%>
     <!-- 左侧菜单栏 -->
-    <%include("../include/sider.html"){}%>
+    <%layout("../include/sider.html",{name:"update-pass"}){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <section class="content">
