[update] 完成学生端的顶部菜单改造

--- a/oes-core/src/main/resources/templates/student/chart/list.html
+++ b/oes-core/src/main/resources/templates/student/chart/list.html
@@ -37,7 +37,7 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-header bg-yellow">
-                                <h3 class="card-title">表格</h3>
+                                <h3 class="card-title">图表分析</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body table-responsive p-0">
