--- a/oes-core/src/main/resources/templates/student/exam/detail.html
+++ b/oes-core/src/main/resources/templates/student/exam/detail.html
@@ -58,7 +58,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <div class="invoice">
+                        <div class="invoice p-3 mb-3">
                             <!-- /.card-header -->
                             <form id="paper" method="post">
                                 <!--单选题-->
