--- a/oes-core/src/main/resources/templates/student/score/detail.html
+++ b/oes-core/src/main/resources/templates/student/score/detail.html
@@ -34,7 +34,7 @@
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item">
-                                <a class="btn btn-warning" href="javascript:history.go(-1)">返回列表</a>
+                                <a class="btn btn-success" href="javascript:history.go(-1)">返回列表</a>
                             </li>
                         </ol>
                     </div>
